parser/src/parser/snapshots/parser__parser__module__tests__parse_many_mods.snap
---
source: parser/src/parser/module.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 17)
  MOD_DEF@[0; 8)
    MOD_KW@[0; 3) "mod"
    WHITESPACE@[3; 4) " "
    NAME@[4; 7)
      IDENT@[4; 7) "bar"
    SEMI@[7; 8) ";"
  WHITESPACE@[8; 9) " "
  MOD_DEF@[9; 17)
    MOD_KW@[9; 12) "mod"
    WHITESPACE@[12; 13) " "
    NAME@[13; 16)
      IDENT@[13; 16) "foo"
    SEMI@[16; 17) ";"

